Fix group name update